--- a/vinyl-baku-backend/package.json
+++ b/vinyl-baku-backend/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
     "express": "^5.2.1"
   }
 }
